@@ -324,6 +324,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   MediaWiki:Sitenotice and MediaWiki:Anonnotice.
 * (bug 8044) When redirecting from the canonical name of the special page
   to the localised one, parameters/subpages are omitted
+* (bug 8164) Special:Booksources should use GET for form submission
+* Rewrite Special:Booksources to clean up interface and remove redundant code
 
 == Languages updated ==
 
